--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   "dependencies": {
     "@nivo/core": "^0.88.0",
     "@nivo/network": "^0.88.0",
+    "neovis.js": "^2.1.0",
     "next": "14.2.13",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-force-graph": "^1.44.7",
+    "use-neo4j": "^0.3.13"
   },
   "devDependencies": {
     "@types/node": "^20",
