--- a/package.json
+++ b/package.json
@@ -11,14 +11,19 @@
   "dependencies": {
     "@nivo/core": "^0.88.0",
     "@nivo/network": "^0.88.0",
+    "cytoscape": "^3.30.3",
+    "cytoscape-cose-bilkent": "^4.1.0",
+    "cytoscape-klay": "^3.1.4",
     "neovis.js": "^2.1.0",
     "next": "14.2.13",
     "react": "^18",
+    "react-cytoscapejs": "^2.0.0",
     "react-dom": "^18",
     "react-force-graph": "^1.44.7",
     "use-neo4j": "^0.3.13"
   },
   "devDependencies": {
+    "@types/cytoscape": "^3.21.8",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
